--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,18 @@ documentation = "https://abrahammurciano.github.io/python-dirct/dirct"
 keywords = []
 
 [tool.poetry.dependencies]
-python = "^3.11"
-pyyaml = "^6.0.1"
-more-itertools = "^10.1.0"
+python = ">=3.11"
+pyyaml = ">=6.0.1"
+more-itertools = ">=10.1.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "*"
 black = "*"
 pdoc3 = "*"
 toml = "*"
 types-toml = "*"
 mypy = "*"
-
-[tool.poetry.group.dev.dependencies]
-types-pyyaml = "^6.0.12.12"
+types-pyyaml = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
